# somba_pipeline

./: .gitignore  ACCEPTANCE_CRITERIA_VERIFICATION.md  INFERENCE_PIPELINE_INTEGRATION.md  README.md  pyproject.toml  test_inference_pipeline.py
claude_code_docs/: api_reference.md  configuration.md
config/: test_go2rtc.yaml  test_manager_config.json  test_shard.json  test_shard_config.json  test_simple_config.json
docs/: phase3_specification.md  phase4_manager_layer_implementation.md
plan/: inference_pipeline_docs.md  iterative_implementation_roadmap.md  manager_worker_technical_specs.md  motion_detection_pipeline.md  phase1_implementation_guide.md  phase1_note.md  phase2_addendum_background.md  phase2_addendum_zones.md  phase2_worker_implementation_guide.md
scripts/: run_tests.py  start_manager.py  test_actual_worker_camera_pickup.py  verify_phase4_implementation.py
somba_pipeline/: __init__.py  config_sync.py  control_plane_api.py  control_plane_client.py  debug_vis.py  inference_timeout_manager.py  lease_manager.py  manager.py  mjpeg_http.py  mock_cp.py  motion_detection.py  ov_ep_patch.py  overlays.py  performance_monitor.py  scaling.py  schemas.py  worker.py  worker_process.py  zero_copy_motion_detector.py  zone_attribution.py  zones.py
tests/: __init__.py
tests/integration/: __init__.py  test_acceptance_criteria.py  test_worker_integration.py
tests/unit/: __init__.py  test_motion_detection.py  test_schemas.py  test_zone_attribution.py
